<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@mipmap/login_bg">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="18sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:background="#ebebeb"
            android:contentDescription="@string/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="30dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/logo3" />


        <!-- Email Label -->


        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edit"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <!-- Password Label -->

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edit"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:singleLine="true" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="159dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="#827717"
            android:padding="12dp"
            android:text="@string/action_sign_in"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/content_singup"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>
